--- a/startbootstrap-clean-blog-gh-pages/From Scratch Section/scratch.html
+++ b/startbootstrap-clean-blog-gh-pages/From Scratch Section/scratch.html
@@ -144,7 +144,7 @@
         <p style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">You can change the font family</p>
         <p>You can style and position block elements called divs</p>
         <br> <br> <br> <br> <br> <br> <br>
-        <div class="block1" style="z-index: 1; position: absolute; top: 4800px; background-color: black; width: 250px; height: 70px; padding-right: 300px; border: solid 20px; border-color: greenyellow;"><br></div>
+        <div class="block1"> Use these styles for this block: style="z-index: 1; position: absolute; top: 4800px; background-color: black; width: 250px; height: 70px; padding-right: 300px; border: solid 20px; border-color: greenyellow;"<br></div>
         <div class="block2" style="z-index: 2; position: absolute; top: 4810px; left: 190px; background-color: blue; width: 150px; height: 40px; padding-right: 300px; border: solid 5px; border-color: orange;"><br></div>
         <div class="block3" style="z-index: 0; position: absolute; top: 4780px; left: 585px; background-color: orangered; width: 50px; height: 50px; border: solid 5px; border-color: red;"><br></div>
 
