--- a/startbootstrap-clean-blog-gh-pages/From Scratch Section/scratch.html
+++ b/startbootstrap-clean-blog-gh-pages/From Scratch Section/scratch.html
@@ -142,7 +142,7 @@
         <p class="tabbed">Here's some of the things you can do with css, I linked a style sheet which has these same features but I'll show you them specifically here by using the style function in html</p>
         <p style="color: brown;">You can change the font color</p>
         <p style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">You can change the font family</p>
-        <p>You can style and position block elements called divs</p>
+        <p>You can style and position block elements called divs, see the blocks at the bottom!</p>
         <br> <br> <br> <br> <br> <br> <br>
         <div class="block1"> Use these styles for this block: style="z-index: 1; position: absolute; top: 4800px; background-color: black; width: 250px; height: 70px; padding-right: 300px; border: solid 20px; border-color: greenyellow;"<br></div>
         <div class="block2" style="z-index: 2; position: absolute; top: 4810px; left: 190px; background-color: blue; width: 150px; height: 40px; padding-right: 300px; border: solid 5px; border-color: orange;"><br></div>
